--- a/index.qmd
+++ b/index.qmd
@@ -1,5 +1,68 @@
 ---
-title: "Correlation Between BTC and ETH Returns"
+title: "Crypto Correlation"
 author: "Umaira"
+execute: 
+  echo: false
+  warning: false
+  message: false
 ---
 
+```{r}
+#BTC vs ETH Daily Returns Correlation
+
+#| message: false
+
+##Load Data
+
+library(tidyverse)
+library(zoo)
+
+btc <- read_rds("btc.rds")
+eth <- read_rds("eth.rds")
+
+# Merge & calculate returns
+
+crypto <- inner_join(btc, eth, by = "date", suffix = c("_btc", "_eth")) %>%
+  arrange(date) %>%
+  mutate(
+    return_btc = (price_btc / lag(price_btc)) - 1,
+    return_eth = (price_eth / lag(price_eth)) - 1,
+    btc_vol = rollapply(return_btc, 30, sd, fill = NA),
+    eth_vol = rollapply(return_eth, 30, sd, fill = NA)
+  )
+
+# Store correlation
+correlation <- cor(crypto$return_btc, crypto$return_eth, use = "complete.obs")
+
+```
+
+Bitcoin and Ethereum exhibit a strong positive correlation over the past year, with a correlation coefficient of **`r round(correlation, 2)`**. This suggests that their price movements are closely linked, likely due to broader cryptocurrency market sentiment. Despite this correlation, each asset has its own risk profile, as shown in their volatility patterns. This analysis highlights how tightly coupled major cryptocurrencies are and why diversification within the crypto space may not significantly reduce risk.
+
+```{r}
+# Install if needed
+# install.packages("plotly")
+
+library(plotly)
+library(dplyr)
+
+# Basic interactive scatterplot with Plotly
+plot_ly(
+  data = crypto,
+  x = ~return_btc,
+  y = ~return_eth,
+  type = 'scatter',
+  mode = 'markers',
+  marker = list(size = 6, color = ~as.numeric(date), colorscale = 'Viridis', showscale = TRUE),
+  text = ~paste("Date:", date, "<br>BTC:", round(return_btc, 4), "<br>ETH:", round(return_eth, 4))
+) %>%
+  layout(
+    title = "BTC vs ETH Daily Returns",
+    xaxis = list(title = "Bitcoin Daily Return"),
+    yaxis = list(title = "Ethereum Daily Return"),
+    hovermode = "closest"
+  )
+
+
+```
+
+We created an interactive scatterplot using Plotly to explore the relationship between daily returns of Bitcoin and Ethereum. Each point represents a single day, with color intensity mapped to time. The plot allows for zooming and hovering to inspect exact return values and dates, providing a dynamic view of the correlation between the two cryptocurrencies.
