--- a/index.qmd
+++ b/index.qmd
@@ -36,7 +36,7 @@ correlation <- cor(crypto$return_btc, crypto$return_eth, use = "complete.obs")
 
 ```
 
-The prices of Bitcoin and Ethereum have exhibited a strong positive correlation over the past year, with a correlation coefficient of 0.8. The dataset for this analysis was obtained from the CoinGecko API, covering daily price movements for Bitcoin and Ethereum in USD over the past 365 days. Data was retrieved using custom R functions with the httr and jsonlite packages, then cleaned and processed using dplyr to create a structured dataset with properly formatted dates and price variables measured in US dollars. This strong correlation suggests that diversification within the cryptocurrency space may not significantly reduce risk, as major cryptocurrencies tend to move in tandem due to broader market sentiment.
+The prices of Bitcoin and Ethereum have exhibited a strong positive correlation over the past year, with a correlation coefficient of 0.8. The dataset for this analysis was obtained from the CoinGecko API, covering daily price movements for Bitcoin and Ethereum in USD over the past 365 days. Data was retrieved using custom R functions with the httr and jsonlite packages, then cleaned and processed using dplyr to create a structured dataset with properly formatted dates and price variables measured in US dollars. The strong correlation between Bitcoin and Ethereum suggests that diversification within the cryptocurrency space may not significantly reduce risk, as major cryptocurrencies tend to move in tandem due to broader market sentiment.
 
 ```{r}
 # Install if needed
